--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cube-ui": "^1.4.3",
     "fastclick": "^1.0.6",
     "font-awesome": "^4.7.0",
+    "good-storage": "^1.0.1",
     "postcss-aspect-ratio-mini": "0.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-px-to-viewport": "0.0.3",
